[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "happler"
version = "0.0.1"
description = "A haplotype-based fine-mapping method"
authors = [
    {name = "Arya Massarat"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "click>=8.0.4",
    "networkx>=2.6.3",
    "scipy>=1.7.3",
    "pydot>=1.4.2",
    "pysam>=0.19.0",
    "haptools @ git+https://github.com/cast-genomics/haptools.git@cf4219f820a09366778bd4734ae496a18c69a902",
    "statsmodels>=0.13.4",
]

[tool.poetry.dependencies]
numpy = [
    { version = "1.21.0" , markers = "python_version <= '3.9'" },
    { version = "2.2.2" , markers = "python_version > '3.9'" },
]
click = [
    { version = "8.0.4" , markers = "python_version <= '3.9'" },
    { version = "8.1.1" , markers = "python_version > '3.9'" },
]
networkx = [
    { version = "2.6.3" , markers = "python_version <= '3.9'" },
    { version = "3.4.2" , markers = "python_version > '3.9'" },
]
scipy = [
    { version = "1.7.3" , markers = "python_version <= '3.9'" },
    { version = "1.15.2" , markers = "python_version > '3.9'" },
]
pydot = [
    { version = "1.4.2" , markers = "python_version <= '3.9'" },
    { version = "3.0.4" , markers = "python_version > '3.9'" },
]
pysam = [
    { version = "0.19.0" , markers = "python_version <= '3.9'" },
    { version = "0.23.0" , markers = "python_version > '3.9'" },
]
# upgrade to haptools 0.6.0 once released
haptools = [
    { rev = "cf4219f820a09366778bd4734ae496a18c69a902" , markers = "python_version <= '3.9'", git = "https://github.com/cast-genomics/haptools.git" },
    { rev = "cf4219f820a09366778bd4734ae496a18c69a902" , markers = "python_version > '3.9'", git = "https://github.com/cast-genomics/haptools.git" },
]
statsmodels = [
    { version = "0.13.4" , markers = "python_version <= '3.9'" },
    { version = "0.14.4" , markers = "python_version > '3.9'" },
]

[project.urls]
repository = "https://github.com/gymrek-lab/happler"
homepage = "https://github.com/gymrek-lab/happler"
documentation = "https://haptools.readthedocs.io"
changelog = "https://github.com/gymrek-lab/happler/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
happler = 'happler.__main__:main'

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.3.2"
sphinx-autodoc-typehints = ">=1.13.0"
sphinx-rtd-theme = ">=1.0.0"
numpydoc = ">=1.1.0"
sphinx-click = ">=3.0.2"

[tool.poetry.group.tests.dependencies]
pytest = ">=7.4.3"
black = [
    { version = ">=23.3.0" , markers = "python_version < '3.9'" },
    { version = ">=25.1.0" , markers = "python_version >= '3.9'" },
]
ipython = ">=7.34.0"
coverage = {extras = ["toml"], version = ">=7.2.7"}

[tool.poetry.requires-plugins]
poetry-conda = ">=0.1.4"
poetry-plugin-export = ">=1.9"
poetry-plugin-shell = ">=1.0.1"

[tool.black]
line-length = 90
preview = true
extend-exclude = "analysis/"

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
